Chore: Miscellaneous workspace uncommitted UI changes